adding links to source docs

--- a/jupyter-media-bundle.ipynb
+++ b/jupyter-media-bundle.ipynb
@@ -75,7 +75,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also implement a special method, `_repr_mimebundle_` which returns a dictionary that contains multiple formats, keyed by mimetype, or a tuple of two dictionaries, (__data__, __metadata__). This method has precedence over all other `_repr_*_` methods."
+    "You can also implement a special method, `_repr_mimebundle_` which returns a dictionary that contains multiple formats, keyed by mimetype, or a tuple of two dictionaries, (__data__, __metadata__). This method has precedence over all other `_repr_*_` methods.\n",
+    "\n",
+    "For more details on implementing various `_repr_*_` methods, see this excellent [notebook with a number of examples](https://nbviewer.jupyter.org/github/ipython/ipython/blob/master/examples/IPython%20Kernel/Custom%20Display%20Logic.ipynb)."
    ]
   },
   {
