updating all notebooks with latest execution against conda env

--- a/jupyter-magics.ipynb
+++ b/jupyter-magics.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -338,20 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'BROWSER': '/mnt/c/Windows/explorer.exe',\n",
+       "{'APPDATA': 'C:\\\\Users\\\\jlam\\\\AppData\\\\Roaming',\n",
+       " 'BROWSER': '/mnt/c/Windows/explorer.exe',\n",
        " 'CONDA_DEFAULT_ENV': 'base',\n",
        " 'CONDA_EXE': '/home/jflam/anaconda3/bin/conda',\n",
        " 'CONDA_PREFIX': '/home/jflam/anaconda3',\n",
        " 'CONDA_PROMPT_MODIFIER': '(base) ',\n",
        " 'CONDA_PYTHON_EXE': '/home/jflam/anaconda3/bin/python',\n",
        " 'CONDA_SHLVL': '1',\n",
-       " 'DISPLAY': '172.28.112.1:0.0',\n",
+       " 'DISPLAY': '192.168.208.1:0.0',\n",
        " 'HOME': '/home/jflam',\n",
        " 'HOSTTYPE': 'x86_64',\n",
        " 'LANG': 'C.UTF-8',\n",
@@ -362,17 +363,18 @@
        " 'NAME': 'LIVINGTHEDREAM',\n",
        " 'OLDPWD': '/home/jflam/src',\n",
        " 'PAGER': 'cat',\n",
-       " 'PATH': '/home/jflam/anaconda3/bin:/home/jflam/anaconda3/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/mnt/c/WINDOWS/system32:/mnt/c/WINDOWS:/mnt/c/WINDOWS/System32/Wbem:/mnt/c/WINDOWS/System32/WindowsPowerShell/v1.0:/mnt/c/WINDOWS/System32/OpenSSH:/mnt/c/Program Files/Git/cmd:/mnt/c/Program Files/Docker/Docker/resources/bin:/mnt/c/ProgramData/DockerDesktop/version-bin:/mnt/c/Users/jlam/AppData/Local/Microsoft/WindowsApps:/mnt/c/Users/jlam/AppData/Local/Programs/Microsoft VS Code/bin:/usr/local/go/bin:/home/jflam/go/bin:/usr/local/go/bin:/home/jflam/go/bin',\n",
+       " 'PATH': '/home/jflam/anaconda3/bin:/home/jflam/anaconda3/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/mnt/c/WINDOWS/system32:/mnt/c/WINDOWS:/mnt/c/WINDOWS/System32/Wbem:/mnt/c/WINDOWS/System32/WindowsPowerShell/v1.0:/mnt/c/WINDOWS/System32/OpenSSH:/mnt/c/Program Files/Git/cmd:/mnt/c/Program Files/PuTTY:/mnt/c/Program Files (x86)/RobotMesh/rmbuild:/mnt/c/Program Files/Docker/Docker/resources/bin:/mnt/c/ProgramData/DockerDesktop/version-bin:/mnt/c/Users/jlam/AppData/Local/Microsoft/WindowsApps:/mnt/c/Users/jlam/AppData/Local/Programs/Microsoft VS Code/bin:/usr/local/go/bin:/home/jflam/go/bin:/usr/local/go/bin:/home/jflam/go/bin',\n",
        " 'PWD': '/home/jflam/src/hello-jupyter',\n",
        " 'SHELL': '/usr/bin/zsh',\n",
        " 'SHLVL': '2',\n",
        " 'TERM': 'xterm-color',\n",
-       " 'TMUX': '/tmp/tmux-1000/default,50,0',\n",
+       " 'TMUX': '/tmp/tmux-1000/default,13291,0',\n",
        " 'TMUX_PANE': '%0',\n",
        " 'USER': 'jflam',\n",
        " 'WSLENV': '',\n",
        " 'WSL_DISTRO_NAME': 'Ubuntu',\n",
-       " 'WSL_INTEROP': '/run/WSL/7_interop',\n",
+       " 'WSL_GUEST_IP': '192.168.209.58',\n",
+       " 'WSL_INTEROP': '/run/WSL/13183_interop',\n",
        " 'ZSH': '/home/jflam/.oh-my-zsh',\n",
        " '_': '/home/jflam/anaconda3/bin/jupyter',\n",
        " '_CE_CONDA': '',\n",
@@ -382,13 +384,13 @@
        " 'CONDA_BACKUP_JAVA_LD_LIBRARY_PATH': '',\n",
        " 'JAVA_LD_LIBRARY_PATH': '/home/jflam/anaconda3/jre/lib/amd64/server',\n",
        " 'KERNEL_LAUNCH_TIMEOUT': '40',\n",
-       " 'JPY_PARENT_PID': '1433',\n",
+       " 'JPY_PARENT_PID': '25036',\n",
        " 'CLICOLOR': '1',\n",
        " 'GIT_PAGER': 'cat',\n",
        " 'MPLBACKEND': 'module://ipykernel.pylab.backend_inline'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
