--- a/clojure-why lisp macros are cool.ipynb
+++ b/clojure-why lisp macros are cool.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "#'user/x"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "43"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,35 +451,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Execution error (IllegalArgumentException) at user/eval4097 (REPL:1).\n",
+      "Execution error (IllegalArgumentException) at user/eval4100 (REPL:1).\n",
       "Don't know how to create ISeq from: java.lang.Long\n"
      ]
     },
     {
      "ename": "class java.lang.IllegalArgumentException",
      "evalue": "",
+     "execution_count": 4,
      "output_type": "error",
+     "status": "error",
      "traceback": [
-      "    RT.java:   557 clojure.lang.RT/seqFrom                                ",
-      "    RT.java:   537 clojure.lang.RT/seq                                    ",
-      "    RT.java:   687 clojure.lang.RT/cons                                   ",
-      "   core.clj:    29 clojure.core$cons__5376/invokeStatic                   ",
-      "   core.clj:  3214 clojure.core$eval/invokeStatic                         ",
-      "   core.clj:  3210 clojure.core$eval/invoke                               ",
+      "    RT.java:   557 clojure.lang.RT/seqFrom",
+      "    RT.java:   537 clojure.lang.RT/seq",
+      "    RT.java:   687 clojure.lang.RT/cons",
+      "   core.clj:    29 clojure.core$cons__5376/invokeStatic",
+      "   core.clj:  3214 clojure.core$eval/invokeStatic",
+      "   core.clj:  3210 clojure.core$eval/invoke",
       "   main.clj:   437 clojure.main$repl$read_eval_print__9086$fn__9089/invoke",
-      "   main.clj:   458 clojure.main$repl$fn__9095/invoke                      ",
-      "   main.clj:   368 clojure.main$repl/doInvoke                             ",
-      "RestFn.java:  1523 clojure.lang.RestFn/invoke                             ",
-      "   AFn.java:    22 clojure.lang.AFn/run                                   ",
-      "   AFn.java:    22 clojure.lang.AFn/run                                   ",
-      "Thread.java:   745 java.lang.Thread/run                                   "
+      "   main.clj:   458 clojure.main$repl$fn__9095/invoke",
+      "   main.clj:   368 clojure.main$repl/doInvoke",
+      "RestFn.java:  1523 clojure.lang.RestFn/invoke",
+      "   AFn.java:    22 clojure.lang.AFn/run",
+      "   AFn.java:    22 clojure.lang.AFn/run",
+      "Thread.java:   745 java.lang.Thread/run"
      ]
     }
    ],
@@ -496,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +507,7 @@
        "(1 2 3)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +537,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +557,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +577,7 @@
        "nil"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +597,7 @@
        "(1 3 2 1)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +617,7 @@
        "#'user/y"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +637,7 @@
        "(1 3 2 1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +657,7 @@
        "3"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +677,7 @@
        "(3 2 1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Clojure (clojupyter=0.2.3=2)",
+   "display_name": "Clojure (clojupyter=0.3.1=1)",
    "language": "clojure",
    "name": "conda-clojupyter"
   },
@@ -706,5 +708,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
